# blender-autorender

./: .gitignore  README.md  flake.nix  pyproject.toml  pyrightconfig.json
blender_autorender/: __main__.py  anim_scn.py  anim_sprite.py  config.py  lib.py  material.py  utils.py
stubs/: bpy.pyi
test_files/: animated_human.blend  animated_human.json  autorender.json  cobblestone.blend  cobblestone.json  monkey.blend  monkey.json
